--- a/simple-embedded-jsf/README.adoc
+++ b/simple-embedded-jsf/README.adoc
@@ -1,3 +1,3 @@
-= Simple JSF example with embedded IdentityStore
+= Soteria + JSF
 
-
+A simple example showing how to configure Java EE Security 1.0 for Java ServerFaces applications.
