--- a/simple-embedded-mvc/README.adoc
+++ b/simple-embedded-mvc/README.adoc
@@ -1,3 +1,3 @@
-= Simple MVC 1.0 example with embedded IdentityStore
+= Soteria + MVC 1.0
 
-
+A simple example showing how to configure Java EE Security 1.0 for MVC 1.0 applications.
