--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
-= Java EE Security Samples
+= Jakarta EE Security Samples
 
-This samples are a playground to show how to combine JSR 375 with the other Java EE technologies in Java EE 8.
+Jakarta EE Security samples used in demos and talks.
